# atom-demo

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
docs/: notes.txt
include/: calculator.hpp
scripts/: build.sh  package.sh  test.sh
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
